--- a/finance/mortgage/affordability-calculator/index.html
+++ b/finance/mortgage/affordability-calculator/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/dark-mode.css" />
   <link rel="stylesheet" href="/css/dark-mode-button.css" />
   <!-- 3) FontAwesome (all.min.css) -->
-  <link rel="stylesheet" href="/css/all.min.css" />
+  <link rel="stylesheet" "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <!-- 4) Ribbon, Breadcrumb, Fixes -->
   <link rel="stylesheet" href="/css/navigation-ribbon.css" />
   <link rel="stylesheet" href="/css/breadcrumb-styles.css" />
