--- a/finance/mortgage/affordability-calculator/index.html
+++ b/finance/mortgage/affordability-calculator/index.html
@@ -388,7 +388,7 @@
                         </select>
                     </div>
                     <div class="form-actions">
-                        <button type="button" id="calculateAffordabilityButton" class="btn btn-primary">Calculate Affordability</button>
+                        <button type="button" id="calculate-button"  class="btn btn-primary">Calculate Affordability</button>
                         <button type="reset" id="resetButton" class="btn btn-secondary">Reset</button>
                     </div>
                 </form>
