--- a/finance/mortgage/affordability-calculator/index.html
+++ b/finance/mortgage/affordability-calculator/index.html
@@ -278,19 +278,23 @@
       </nav>
     </div>
   </header>
+ 
   <!-- ==== BREADCRUMB ==== -->
-  <nav aria-label="Breadcrumb" class="breadcrumb-nav">
-    <div class="container">
-      <ol>
-        <li><a href="/">Home</a></li>
-        <li><a href="/finance/">Finance</a></li>
-        <li><a href="/finance/mortgage/">Mortgage</a></li>
-        <li><span aria-current="page">Mortgage Affordability Calculator</span></li>
-      </ol>
+  
+  <div class="breadcrumbs">
+    <div class="breadcrumbs-container">
+      <a href="/">Home</a>
+      <span class="separator">/</span>
+      <a href="/finance/">Finance</a>
+      <span class="separator">/</span>
+      <a href="/finance/mortgage/">Mortgage</a>
+      <span class="separator">/</span>
+      <span class="current">Mortgage Affordability Calculator</span>
     </div>
-  </nav>
+  </div>
 
-    <!-- ==== NAVIGATION RIBBON ==== -->
+  <!-- ==== NAVIGATION RIBBON ==== -->
+  
   <div class="navigation-ribbon">
     <div class="navigation-ribbon-container">
       <a href="/finance/mortgage/" class="active">
