--- a/test-calculator/index.html
+++ b/test-calculator/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Calculator Page | FreecalcHub</title>
-    <meta name="description" content="A test page to verify template styling with relative paths.">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/calchub-consolidated-fixes.css">
-    <link rel="stylesheet" href="../css/breadcrumb-styles.css">
-    <link rel="stylesheet" href="../css/navigation-ribbon.css">
+    <meta name="description" content="A test page to verify template styling.">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/calchub-consolidated-fixes.css">
+    <link rel="stylesheet" href="/css/breadcrumb-styles.css">
+    <link rel="stylesheet" href="/css/navigation-ribbon.css">
     <link rel="stylesheet" href="./css/test-calculator.css"> 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
     <script>
@@ -24,7 +24,7 @@
         {
           "@type": "WebPage",
           "name": "Test Calculator Page | FreecalcHub",
-          "description": "A test page to verify template styling with relative paths.",
+          "description": "A test page to verify template styling.",
           "url": "https://www.freecalchub.com/test-calculator/" 
         },
         {
@@ -43,36 +43,36 @@
     <header class="site-header">
         <div class="container header-flex">
             <div class="logo">
-                <a href="../"><img src="../images/logo.svg" alt="FreecalcHub Logo"></a>
+                <a href="/"><img src="/images/logo.svg" alt="FreecalcHub Logo"></a>
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="../">Home</a></li>
-                    <li><a href="../finance/">Finance</a></li>
-                    <li><a href="../math/">Math</a></li>
-                    <li><a href="../health/">Health</a></li>
-                    <li><a href="../conversions/">Conversions</a></li>
-                    <li><a href="../date-time/">Date & Time</a></li>
-                    <li><a href="../more/">More</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/finance/">Finance</a></li>
+                    <li><a href="/math/">Math</a></li>
+                    <li><a href="/health/">Health</a></li>
+                    <li><a href="/conversions/">Conversions</a></li>
+                    <li><a href="/date-time/">Date & Time</a></li>
+                    <li><a href="/more/">More</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
                 <button id="dark-mode-toggle" aria-label="Toggle dark mode">
-                    <img src="../images/moon-icon.svg" alt="Dark mode" class="dark-mode-icon">
-                    <img src="../images/sun-icon.svg" alt="Light mode" class="light-mode-icon">
+                    <img src="/images/moon-icon.svg" alt="Dark mode" class="dark-mode-icon">
+                    <img src="/images/sun-icon.svg" alt="Light mode" class="light-mode-icon">
                 </button>
                 <button id="mobile-menu-button" aria-label="Open menu">☰</button>
             </div>
         </div>
         <div class="mobile-menu" id="mobile-menu-panel">
             <ul>
-                <li><a href="../">Home</a></li>
-                <li><a href="../finance/">Finance</a></li>
-                <li><a href="../math/">Math</a></li>
-                <li><a href="../health/">Health</a></li>
-                <li><a href="../conversions/">Conversions</a></li>
-                <li><a href="../date-time/">Date & Time</a></li>
-                <li><a href="../more/">More</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/finance/">Finance</a></li>
+                <li><a href="/math/">Math</a></li>
+                <li><a href="/health/">Health</a></li>
+                <li><a href="/conversions/">Conversions</a></li>
+                <li><a href="/date-time/">Date & Time</a></li>
+                <li><a href="/more/">More</a></li>
             </ul>
         </div>
     </header>
@@ -80,8 +80,8 @@
     <nav aria-label="Breadcrumb" class="breadcrumb-nav">
         <div class="container">
             <ol>
-                <li><a href="../">Home</a></li>
-                <li><a href="../test-category/">Test Category</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/test-category/">Test Category</a></li>
                 <li><span aria-current="page">Test Calculator</span></li>
             </ol>
         </div>
@@ -89,9 +89,9 @@
 
     <div class="navigation-ribbon">
         <div class="navigation-ribbon-container">
-            <a href="./" class="active"><i class="fas fa-calculator"></i> Test Calc</a>
-            <a href="../test-category/another-page/"><i class="fas fa-book"></i> Another Page</a>
-            <a href="../test-category/yet-another/"><i class="fas fa-info-circle"></i> Yet Another</a>
+            <a href="/test-category/test-calculator/" class="active"><i class="fas fa-calculator"></i> Test Calc</a>
+            <a href="/test-category/another-page/"><i class="fas fa-book"></i> Another Page</a>
+            <a href="/test-category/yet-another/"><i class="fas fa-info-circle"></i> Yet Another</a>
         </div>
     </div>
 
@@ -99,7 +99,7 @@
         <article class="calculator-page-content">
             <h1 class="page-title">Test Calculator</h1>
             <section class="calculator-description-section content-section">
-                <p>This is a minimal test page to check if global styles for the header, breadcrumbs, and navigation ribbon are applying correctly when this template is used in a subdirectory, using relative paths for global assets.</p>
+                <p>This is a minimal test page to check if global styles for the header, breadcrumbs, and navigation ribbon are applying correctly when this template is used in a subdirectory.</p>
             </section>
 
             <section id="calculator-section" class="calculator-interface content-section card">
@@ -134,22 +134,22 @@
                 <div class="footer-column">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="../">Home</a></li>
-                        <li><a href="../about/">About Us</a></li>
-                        <li><a href="../contact/">Contact</a></li>
-                        <li><a href="../privacy-policy/">Privacy Policy</a></li>
-                        <li><a href="../terms-of-service/">Terms of Service</a></li>
-                         <li><a href="../sitemap.xml">Sitemap</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/about/">About Us</a></li>
+                        <li><a href="/contact/">Contact</a></li>
+                        <li><a href="/privacy-policy/">Privacy Policy</a></li>
+                        <li><a href="/terms-of-service/">Terms of Service</a></li>
+                         <li><a href="/sitemap.xml">Sitemap</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h4>Categories</h4>
                     <ul>
-                        <li><a href="../finance/">Finance Calculators</a></li>
-                        <li><a href="../math/">Math Calculators</a></li>
-                        <li><a href="../health/">Health Calculators</a></li>
-                        <li><a href="../conversions/">Conversion Tools</a></li>
-                        <li><a href="../date-time/">Date & Time Tools</a></li>
+                        <li><a href="/finance/">Finance Calculators</a></li>
+                        <li><a href="/math/">Math Calculators</a></li>
+                        <li><a href="/health/">Health Calculators</a></li>
+                        <li><a href="/conversions/">Conversion Tools</a></li>
+                        <li><a href="/date-time/">Date & Time Tools</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -168,8 +168,8 @@
         </div>
     </footer>
 
-    <script src="../js/main.js"></script>
-    <script src="../js/dark-mode.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/dark-mode.js"></script>
     <script src="./js/test-calculator.js"></script> 
 </body>
 </html>
