--- a/test-calculator/index.html
+++ b/test-calculator/index.html
@@ -157,10 +157,11 @@
                 <div class="footer-column">
                     <h3>Support</h3>
                     <ul>
+                        <li><a href="/">Home</a></li>
                         <li><a href="/about/">About Us</a></li>
                         <li><a href="/contact/">Contact</a></li>
-                        <li><a href="/privacy/">Privacy Policy</a> 
-                        <li><a href="/terms/">Terms of Service</a></li> 
+                        <li><a href="/privacy/">Privacy Policy</a></li>
+                        <li><a href="/terms/">Terms of Service</a></li>
                         <li><a href="/sitemap.xml">Sitemap</a></li> 
                     </ul>
                 </div>
