--- a/test-calculator/index.html
+++ b/test-calculator/index.html
@@ -159,7 +159,7 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="/about/">About Us</a></li>
-                        <li><a href="/contact/">Contact</a></li>
+                        <li><a href="/contact/">Contact Us</a></li>
                         <li><a href="/privacy/">Privacy Policy</a></li>
                         <li><a href="/terms/">Terms of Service</a></li>
                         <li><a href="/sitemap.xml">Sitemap</a></li> 
