--- a/finance/mortgage/index.html
+++ b/finance/mortgage/index.html
@@ -257,8 +257,8 @@
                     <ul>
                         <li><a href="/about/">About Us</a></li>
                         <li><a href="/contact/">Contact</a></li>
-                        <li><a href="/privacy-policy/">Privacy Policy</a></li> 
-                        <li><a href="/terms-of-service/">Terms of Service</a></li> 
+                        <li><a href="/privacy/">Privacy Policy</a></li> 
+                        <li><a href="/terms/">Terms of Service</a></li> 
                         <li><a href="/sitemap.xml">Sitemap</a></li> 
                     </ul>
                 </div>
